# serializer version: 1
# name: TestPerson.test_group_query_includes_recording_events
  '''
  
  SELECT $group_0 AS actor_id,
         count() AS actor_value ,
         groupUniqArray(100)((timestamp, uuid,
                                         $session_id,
                                         $window_id)) as matching_events
  FROM
    (SELECT e.timestamp as timestamp,
            e."$group_0" as "$group_0",
            e."$window_id" as $window_id,
            e."$session_id" as $session_id,
            e.uuid as uuid
     FROM events e
     WHERE team_id = 99999
       AND event = 'pageview'
       AND toTimeZone(timestamp, 'UTC') >= toDateTime('2021-01-21 00:00:00', 'UTC')
       AND toTimeZone(timestamp, 'UTC') <= toDateTime('2021-01-21 23:59:59', 'UTC')
       AND "$group_0" != '' )
  GROUP BY actor_id
  ORDER BY actor_value DESC,
           actor_id DESC
  LIMIT 100
  OFFSET 0
  '''
# ---
# name: TestPerson.test_group_query_includes_recording_events.1
  '''
  
  SELECT DISTINCT session_id
  FROM session_replay_events
  WHERE team_id = 99999
    and session_id in ['s1']
    AND min_first_timestamp >= '2021-01-20 00:00:00'
    AND max_last_timestamp <= '2021-01-22 23:59:59'
  '''
# ---
# name: TestPerson.test_person_query_does_not_include_recording_events_if_flag_not_set
  '''
  
  SELECT person_id AS actor_id,
         count() AS actor_value
  FROM
    (SELECT e.timestamp as timestamp,
            if(notEmpty(pdi.distinct_id), pdi.person_id, e.person_id) as person_id,
            e.distinct_id as distinct_id,
            e.team_id as team_id
     FROM events e
     LEFT OUTER JOIN
       (SELECT distinct_id,
               argMax(person_id, version) as person_id
        FROM person_distinct_id2
        WHERE team_id = 99999
          AND distinct_id IN
            (SELECT distinct_id
             FROM events
             WHERE team_id = 99999
               AND event = 'pageview'
               AND toTimeZone(timestamp, 'UTC') >= toDateTime('2021-01-21 00:00:00', 'UTC')
               AND toTimeZone(timestamp, 'UTC') <= toDateTime('2021-01-21 23:59:59', 'UTC'))
        GROUP BY distinct_id
        HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
     WHERE team_id = 99999
       AND event = 'pageview'
       AND toTimeZone(timestamp, 'UTC') >= toDateTime('2021-01-21 00:00:00', 'UTC')
       AND toTimeZone(timestamp, 'UTC') <= toDateTime('2021-01-21 23:59:59', 'UTC') )
  GROUP BY actor_id
  ORDER BY actor_value DESC,
           actor_id DESC
  LIMIT 100
  OFFSET 0
  '''
# ---
